@@ -17,6 +17,8 @@ linux (4.19~rc3-1~exp2) UNRELEASED; urgency=medium
   * linux-perf: Fix generation of Perl and Python interpreter dependencies
     (Closes: #908547)
   * lockdep, lib{cpupower,lockdep}-dev: Remove bogus deps on ${shlibs:Depends}
+  * debian/rules.d/tools/power/linux-cpupower: Add "+" to recursive make
+    commands
 
  -- Ben Hutchings <ben@decadent.org.uk>  Mon, 10 Sep 2018 22:25:53 +0100
 
